@@ -303,6 +303,8 @@ Release 2.6.0 - UNRELEASED
     HADOOP-10967. Improve DefaultCryptoExtension#generateEncryptedKey
     performance. (hitliuyi via tucu)
 
+    HADOOP-10488. TestKeyProviderFactory fails randomly. (tucu)
+
 Release 2.5.0 - 2014-08-11
 
   INCOMPATIBLE CHANGES
